# HyprDriftDE

./: .gitattributes  .gitignore  CLA.md  CONTRIBUTING.md  LICENSES.md  README.md  SECURITY.md  install.sh
.config/hypr/: hyprland.conf  hyprpaper.conf  kate.bak.hyprland.conf~
.config/hypr/conf/: Animation.conf  Autostart.conf  DefaultPrograms.conf  KeyBinds.conf  Misc.conf  Mouse.conf  Ui.conf  WindowRules.conf
config/: drift-config.yaml
drift-daemon/: CMakeLists.txt
drift-daemon/src/: AppLauncher.cpp  AppLauncher.h  DBusManager.cpp  DriftCore.cpp  DriftCore.h  Logger.cpp  ProcessManager.h  SessionManager.cpp  SessionManager.h  SettingsManager.cpp  SettingsManager.h  ThemeManager.h  main.cpp  utilities.cpp
drift-daemon/src/apps/: AppLauncher.cpp  AppLauncher.h  CMakeLists.txt
drift-daemon/src/core/: CMakeLists.txt  DriftCore.cpp  DriftCore.h
drift-daemon/src/dbus/: CMakeLists.txt  DBusManager.cpp  DBusManager.h
drift-daemon/src/driftModule/: CMakeLists.txt  DriftModule.cpp  DriftModule.h
drift-daemon/src/logging/: CMakeLists.txt  Logger.cpp  Logger.h
drift-daemon/src/process/: CMakeLists.txt  ProcessManager.cpp  ProcessManager.h
drift-daemon/src/session/: CMakeLists.txt  SessionManager.cpp  SessionManager.h
drift-daemon/src/settings/: CMakeLists.txt  SettingsManager.cpp  SettingsManager.h
drift-daemon/src/theme/: CMakeLists.txt  ThemeManager.cpp  ThemeManager.h
drift-daemon/src/utils/: CMakeLists.txt  utilities.h
drift-daemon/src/wallpaper/: CMakeLists.txt  WallpaperManager.cpp  WallpaperManager.h
quickdrift-shell/: CurrentHotkeys.txt  CurrentNeededApplications.txt  shell.qml
quickdrift-shell/Internal/: ColorQuantizer.qml  GlobalShortcusts.qml  Logging.qml  Settings.qml  StyledText.qml  StyledTextLarge.qml
quickdrift-shell/Internal/Themes/: README.md  Theme.qml
quickdrift-shell/Modules/Interactive/: AltTab.qml  BluetoothWidget.qml  PowerButton.qml  SysTray.qml  SysTrayItem.qml  WorkspaceManager.qml
quickdrift-shell/Modules/Interactive/ApplicationLauncher/: LauncherButton.qml  LauncherWindow.qml  apps.json  apps.json.tmp.0VFFSG  apps.json.tmp.PKCJ39  apps.json.tmp.rE87Hd  apps.json.tmp.vidONX
quickdrift-shell/Modules/Interactive/ClipboardManager/: ClipboardEntry.qml  ClipboardHistory.qml  ClipboardManager.qml
quickdrift-shell/Modules/Interactive/VolumeController/: VolumeController.qml  VolumeFlyout.qml
quickdrift-shell/Modules/Performance/: CpuWidget.qml  GpuWidget.qml  RamWidget.qml
quickdrift-shell/Modules/Utility/: ActiveWindowWidget.qml  ClockWidget.qml  NetworkWidget.qml  Spacer.qml
quickdrift-shell/Panels/: Taskbar.qml
quickdrift-shell/Panels/MinimizeManager/: MinimizeItem.qml  MinimizeManager.qml  MinimizeWindow.qml
quickdrift-shell/Scripts/: Get-Apps.sh  Get-CPU-Percent.sh  Get-GPU-Percent.sh  Get-RAM-Percent.sh
quickdrift-shell/Services/: AudioControl.qml  AudioPlayback.qml  GlobalVariables.qml
quickdrift-shell/Services/IconResolver/: IconOverrideStore.qml  IconResolver.qml
system/scripts/: hyprdrift-session  quickshell-loop.sh
system/services/: quickdrift.service
system/session/: hyprdrift.desktop
